@@ -5,34 +5,15 @@ Mailfilter INSTALL
 
 To run Mailfilter it's best to have a Unix-like operating system, but
 it also compiles fine with Windows 9x/NT/2000 if additional libraries
-and tools are installed (e.g. Cygwin, or DJGPP).  For instance,
-Mailfilter has been successfully compiled and tested with
-
- - Solaris 8 / SunOS 5.8
-
- - Irix 6.5
-
- - FreeBSD 4.1.1-RELEASE, 4.5-RELEASE, 4.9-RELEASE
-
- - Mac OS X 10.0
-
- - NetBSD 1.5
-
- - Linux:  Mandrake 7.0 - 10.0, Debian 2.1 - 3.0, RedHat 6.2 - 7.1,
-           Slackware 3.9, SuSE 6.2, LinuxPPC
-
- - Windows NT, 2000 (using Cygwin)
-
-but it may well work on other platforms, too.  (Please report success
-if you have managed to compile it on any other system - thanks.)
+and tools are installed (e.g., Cygwin, or DJGPP).
 
 0.1  ADD-ON LIBRARIES & TOOLS
 
 To compile/install Mailfilter you also need to have a fairly recent
-version of a C and C++ compiler (e.g. GCC >= 3.0) and your system must
-support BSD-type sockets (in general all Unix systems do meet this
-criterion).  For compilation you will also need the GNU autotools, GNU
-gettext, and the programs flex and bison.
+version of a C and C++ compiler (e.g., GCC >= 3.0) and your system must
+support BSD-type sockets (in general, all Unix systems do meet this
+criterion).  For compilation you will also need the programs flex and
+bison.
 
 NOTE: Please keep in mind that the GNU versions of flex and bison are
 `somewhat' peculiar.  It is *highly* recommended to use your
@@ -77,7 +58,7 @@ values, you can compile the Mailfilter source code with
       make
 
 NOTE: On Linux systems make typically refers to GNU gmake.  However,
-some operating systems (e.g. FreeBSD) ship with different versions of
+some operating systems (e.g., FreeBSD) ship with different versions of
 make and you will need to explicitly use the command 'gmake' (and
 later 'gmake install') in order to get Mailfilter compiled correctly.
 
